fix(vtabs): fix blank space in slider on mobile devices
Added display classes to hide the arrow placeholder which created a blank space on the VTabs slider.

fix #6932

--- a/packages/vuetify/src/components/VSlideGroup/VSlideGroup.sass
+++ b/packages/vuetify/src/components/VSlideGroup/VSlideGroup.sass
@@ -49,4 +49,5 @@
 .v-slide-group__next,
 .v-slide-group__prev
   &--disabled
+    display: none
     pointer-events: none
